# atomic-timer

./: .gitignore  CMakeLists.txt  README.md  setup.py
bindings/: python.cpp
source/: AtomicTimer.cpp  AtomicTimer.h  NTPClient.cpp
tests/: main.cpp  main.py
